# hyprland-workspace-manager

./: LICENSE  Makefile  README.md  dune-project  hyprland-workspace-manager.opam  hyprland_monitor_conf.opam
