(lang dune 3.16)

(name hyprland_monitor_conf)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Pierrick Couderc")

(maintainers "Pierrick Couderc")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name hyprland_monitor_conf)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
